fix malformed CSS, align QuillEditor appearance with Bootstrap form elements

--- a/app/assets/stylesheets/components/QuillViewer.scss
+++ b/app/assets/stylesheets/components/QuillViewer.scss
@@ -8,11 +8,10 @@
 }
 
 .text-editor-quill {
-  border: "0px solid #ced4da";
-  border-radius: "4px";
+  border: $form-select-border-width solid $form-select-border-color;
+  @include border-radius($input-border-radius, 0);
   .ql-editor.ql-blank::before {
     content: "1wt.% Pt, γ-Al2O3 and more...";
-    color: #999;
-    font-style: Helvetica, Arial, sans-serif;
+    @extend .text-lighten2;
   }
 }
